# gibberlink

./: README.md  pyproject.toml
development/: legacy_listen.py  legacy_transmit.py
src/gibberlink/: __init__.py  listen.py  talk.py
